--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					<p class="text-title-company">Eye & Retina Surgeons</p>
 				</div>
 				<div class="col">
-					<img src="assets/ERS logo.png" alt="Company Logo">
+					<img src="assets/ERS logo.png" alt="Eye & Retina Surgeons">
 				</div>
 			</div>
 		</div>
