--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 			<div class="row name-title-company">
 				<div class="col is-6">
 					<p class="text-name">Dr Anna Tan</p>
-					<p class="text-title-company">Ophthalmologist, Partner and Senior Consultant</p>
-					<p class="text-title-company">Eye & Retina Surgeons</p>
+					<p class="text-title-company">Ophthalmologist<br>Partner and Senior Consultant</br></p>
+					<p class="text-title-company">Eye & Cornea Surgeons</p>
 				</div>
 				<div class="col">
 					<img src="ERSlogo2.jpg" alt="Eye & Retina Surgeons">
